# KsanaLLM

./: .gitignore  CMakeLists.txt  QUICKSTART.iluvatar.md  quickstart.sh  setup.py
benchmarks/: README.md  benchmark_throughput.py  cache_stat_visualizer.py
cmake/: iluvatar.cmake
examples/: ksana_llm2-7b.yaml
scripts/: dbg_hf_reference.py
src/ksana_llm/batch_scheduler/: batch_scheduler_test.cpp
src/ksana_llm/batch_scheduler/strategy/: continuous_batching.cpp
src/ksana_llm/cache_manager/block_allocator/: block_allocator.cpp
src/ksana_llm/connector/: task_dispatcher.cpp
src/ksana_llm/connector/communicator/nvida/: nccl_communicator_test.cpp
src/ksana_llm/data_hub/: hidden_unit_buffer.cpp  schedule_output.cpp  schedule_output.h
src/ksana_llm/endpoints/streaming/: streaming_iterator.cpp
src/ksana_llm/kernels/: CMakeLists.txt
src/ksana_llm/kernels/iluvatar/: basic_kernel_wrapper.cpp  basic_kernel_wrapper.h  cast.cpp  compat_shim.h  cuda_kernels.cu  cuda_kernels.cuh  kernel_wrapper.cpp  kernel_wrapper.h  permute.cpp  trans_layout.cpp
src/ksana_llm/layers/: CMakeLists.txt  attention_layer.h  finegrained_mixed_dtype_gemm_layer.h  matmul_layer_factory.cpp  moe_layer_factory.cpp
src/ksana_llm/layers/iluvatar/: attention_layer.cpp  flash_attention_layer.cpp  iluvatar_type_fwd.h  layer_stubs.cpp  llm_kernels_stubs.cpp  paged_attention_layer.cpp
src/ksana_llm/layers/nvidia/: cast_layer.cpp  flash_mla_attention_layer.cpp  flash_sparse_mla_indexer_layer.cpp  input_refit_layer.cpp
src/ksana_llm/model_loader/file_loader/: pytorch_safetensor_file_loader.cpp
src/ksana_llm/models/arc_hunyuan_video/: arc_hunyuan_video_weight_loader.cpp
src/ksana_llm/models/base/: base_model_weight_loader.cpp  common_model_weight_loader.cpp  model_input.cpp
src/ksana_llm/models/bge_reranker_minicpm/: bge_reranker_minicpm_model.cpp
src/ksana_llm/models/common/: common_model.cpp  common_weight.cpp  simple_decoder_layer.cpp  simple_decoder_layer_test.cpp
src/ksana_llm/models/common_moe/: common_moe_weight.cpp
src/ksana_llm/models/deepseek_v3/: deepseek_v3_model.cpp  deepseek_v3_model_test.cpp
src/ksana_llm/models/gpt/: gpt_config.h
src/ksana_llm/models/internlm2/: internlm2_weight.cpp
src/ksana_llm/models/llama/: llama_model.cpp  llama_model_weight_loader.cpp
src/ksana_llm/models/new_deepseek_v3/: new_deepseek_v3_weight_impl.cpp  new_deepseek_v3_weight_loader.cpp
src/ksana_llm/models/quant/: quant_fp8_weight_test.cpp  quant_weight.cpp
src/ksana_llm/models/qwen/: new_qwen_weight_loader.cpp
src/ksana_llm/models/qwen3_moe/: qwen3_moe_model.cpp
src/ksana_llm/modules/attention/: common_attention.cpp  cross_layer_attention.cpp  multihead_attention.cpp  multihead_attention.h  multihead_latent_attention.cpp  multihead_latent_attention.h  multihead_latent_attention_test.cpp  sparse_mla_indexer.cpp  sparse_mla_indexer.h
src/ksana_llm/modules/basic/: flash_attention.cpp  flash_mla_attention.cpp  flash_mla_attention.h
src/ksana_llm/python/: lib  serving_server.py
src/ksana_llm/python/ksana_llm/: ksana_engine.py
src/ksana_llm/python/openaiapi/: serving_chat.py
src/ksana_llm/python/openaiapi/tool_parsers/: abstract_tool_parser.py  deepseekv31_tool_parser.py  deepseekv32_tool_parser.py  deepseekv3_tool_parser.py  kimi_k2_tool_parser.py
src/ksana_llm/python/openaiapi/transformers_utils/: chat_utils.py
src/ksana_llm/runtime/: generation_controller.cpp  infer_request.cpp  infer_request.h
src/ksana_llm/runtime/structured_generation/xgrammar/: xgrammar_structured_generator_creator.h
src/ksana_llm/samplers/topk/: topk_sampling.cpp
src/ksana_llm/service/: inference_engine.cpp  inference_server.cpp
src/ksana_llm/torch_op/: CMakeLists.txt  serving_op.cpp
src/ksana_llm/utils/: CMakeLists.txt  common_context.cpp  common_context.h  device_types.h  device_utils.h  grammar_backend.cpp  grammar_backend.h  grammar_test.cpp  memory_utils.cpp  request.cpp  request.h  safetensors_file_tensor_loader.cpp  tensor.cpp  tokenizer.cpp  tokenizer.h  tokenizer_test.cpp
src/ksana_llm/utils/attention_backend/: flash_attention_backend.cpp
src/ksana_llm/utils/iluvatar/: iluvatar_context.cpp  iluvatar_device.cpp
src/ksana_llm/utils/nvidia/: cuda_utils.cpp  cuda_utils.h  grammar_backend_nvidia.cpp  grammar_backend_nvidia.h  nvidia_context.cpp  nvidia_device.cpp
